--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/UNDP_logo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/UNDP_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#009edb" />
+    <meta name="theme-color" content="#0468B1" />
     <meta
       name="description"
-      content="UN Jobs Market Analytics Dashboard - Comprehensive analysis of UN job market data"
+      content="Baro Talent Analytics - UNDP Workforce Intelligence Dashboard"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>UN Jobs Market Analytics Dashboard</title>
+    <title>Baro Talent Analytics</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
